--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <div class="content">
                   <header> Michael Bartels</header>
                   <p>Student of NHS High</p>
-                  <p>Leading GRA at location 693</p>
+                  <p>Leading T2 at location 693</p>
                 <section class="interests">
                   <header>Interests</header>
                   <ul>
